# llama.cpp-RGUI

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
scripts/: gen-icons.cjs
src/: App.vue  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: [email protected]  icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  models.rs  server.rs  settings.rs  webview.rs
src-tauri/src/config/: mod.rs  paths.rs  schema.rs  store.rs
src-tauri/src/gguf/: meta.rs  mod.rs  parser.rs  quant.rs  vram.rs
src-tauri/src/process/: health.rs  log_pipe.rs  manager.rs  mod.rs  shutdown.rs  spawn.rs
src/assets/styles/: main.css
src/components/: ThemeToggle.vue  WindowControls.vue
src/router/: index.ts
src/stores/: settings.ts
src/views/: LaunchView.vue  SettingsView.vue
