[package]
name = "llama-cpp-rgui"
version = "0.1.0"
description = "llama.cpp 启动客户端 GUI"
authors = ["mylovew"]
license = "MIT"
repository = "https://github.com/mylovew/llama.cpp-RGUI"
homepage = "https://github.com/mylovew/llama.cpp-RGUI"
edition = "2021"
rust-version = "1.77"

[lib]
name = "llama_cpp_rgui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rayon = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
url = "2"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["process", "signal"] }

[features]
# 默认启用自定义协议
custom-protocol = ["tauri/custom-protocol"]
